--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,9 +62,10 @@ jobs:
       - name: Get sponsors and contributors
         id: get-sponsors-and-contributors
         run: |
-          SQP='.data.user.sponsorshipsAsMaintainer.edges | map(.node.sponsor.name // .node.sponsor.login) | join(",")'
-          GQL_SQ='{ user(login: "kaleidawave") { sponsorshipsAsMaintainer(first: 100, activeOnly: false) { edges { node { sponsor { name, login } } } } } }'
-          SPONSORS=$(gh api graphql -f query="$GQL_SQ" -q "$SQP")
+          # TODO pagination for both
+          SQP='.data.user.sponsors.nodes | map(.sponsor.name // .sponsor.login) | join(",")'
+          GQL_SQ='user(login: "kaleidawave") { sponsors: sponsorshipsAsMaintainer(first: 100, activeOnly: false, includePrivate: false) { nodes { sponsor: sponsorEntity { ... on User { login, name } ... on Organization { login, name }  } } } }'
+          SPONSORS=$(gh api graphql -f query="{ $GQL_SQ }" -q "$SQP")
 
           CQP='map(.author.name // .author.login) | unique | join(",")'
           CONTRIBUTORS=$(gh pr list --state merged --json author | jq "$CQP" --raw-output)
@@ -72,10 +73,17 @@ jobs:
           echo "SPONSORS=$SPONSORS" >> "$GITHUB_OUTPUT"
           echo "CONTRIBUTORS=$CONTRIBUTORS" >> "$GITHUB_OUTPUT"
           echo "::notice::CONTRIBUTORS=$CONTRIBUTORS and SPONSORS=$SPONSORS"
-
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
+
+      # Needed for WASM
+      - name: Get run id and date
+        id: get-run-id-and-date
+        run: |
+          echo "GITHUB_RUN_ID=${{ github.run_id }}" >> "$GITHUB_OUTPUT"
+          echo "GITHUB_RUN_DATE=$(date --date='TZ="Europe/London"' +"%Y-%m-%d")" >> "$GITHUB_OUTPUT"
+        shell: bash
 
       - name: Crates publish
         uses: kaleidawave/crates-release-gh-action@main
@@ -107,6 +115,8 @@ jobs:
         env:
           SPONSORS: ${{ steps.get-sponsors-and-contributors.outputs.SPONSORS }}
           CONTRIBUTORS: ${{ steps.get-sponsors-and-contributors.outputs.CONTRIBUTORS }}
+          GITHUB_RUN_ID: ${{ steps.get-run-id-and-date.outputs.GITHUB_RUN_ID }}
+          GITHUB_RUN_DATE: ${{ steps.get-run-id-and-date.outputs.GITHUB_RUN_DATE }}
 
       - name: NPM publish (CLI and library)
         if: ${{ inputs.ezno-version != 'none' }}
