--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -63,5 +63,6 @@ tsify = "0.4.5"
 wasm-bindgen = "0.2"
 
 [dev-dependencies]
+codespan-reporting = "0.11.1"
 pretty_assertions = "1.3.0"
 match_deref = "0.1.1"
