Workflow clean: false to keep existing built artifacts and cache

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -43,6 +43,7 @@ jobs:
         if: ${{ github.ref_name != 'main' }}
         with:
           ref: main
+          clean: false
 
       - name: Build Ezno (main branch)
         run: |
