--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -337,6 +337,21 @@ jobs:
       - name: Lint code with clippy
         run: cargo clippy
 
+  work_in_progress:
+    needs: validity
+    runs-on: ubuntu-latest
+    if: github.ref_name != 'main' && !github.event.pull_request.draft
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+      - uses: brndnmtthws/rust-action-cargo-binstall@v1
+        with:
+          packages: ripgrep
+      - name: Check for TODO comments
+        # TODO can we label these somehow?
+        run: | 
+          rg '(TODO|todo\!|#\[ignore\])'
+
   publish-ability:
     # TODO only need to do for `.toml` file changes
     runs-on: ubuntu-latest
