--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ serde_json = "1.0"
 simple-json-parser = "0.0"
 js-sys = "0.3"
 
+# TODO temp
 [patch.crates-io]
 get-field-by-type = { git = 'https://github.com/kaleidawave/get-field-by-type.git', branch = 'gfbt-on-deref' }
 
