--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ js-sys = "0.3"
 # TODO temp
 [patch.crates-io]
 get-field-by-type = { git = 'https://github.com/kaleidawave/get-field-by-type.git', branch = 'gfbt-on-deref' }
+derive-finite-automaton = { git = 'https://github.com/kaleidawave/derive-finite-automaton.git', branch = 'add-support-for-binary-strings' }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
